--- a/app/src/main/res/layout/whishlist_card_layout.xml
+++ b/app/src/main/res/layout/whishlist_card_layout.xml
@@ -36,7 +36,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
+                     android:layout_weight="3"
                     android:layout_gravity="center"
                     android:id="@+id/wish_image"
                     android:scaleType="fitXY"
@@ -45,11 +45,11 @@
                     />
                 <TableLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:weightSum="4"
-                    android:layout_marginLeft="20dp"
-                    android:layout_weight="3">
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="2.5">
 
                     <TableRow >
                         <TextView
@@ -75,14 +75,25 @@
 
                     </TableRow>
                 </TableLayout>
+
+              <Button
+                  android:layout_width="wrap_content"
+                  android:layout_height="35dp"
+                  android:background="@color/white"
+                  android:id="@+id/move_to_bag_btn"
+                  android:layout_margin="1dp"
+                  android:hint=" Move to Bag "
+                  android:textColorHint="@color/colorPrimary"
+                  android:elevation="8dp"
+                  android:layout_gravity="bottom"/>
             </LinearLayout>
 
             <ImageView
                 android:id="@+id/delete_wish"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_delete_forever_black_24dp"
-                android:layout_weight="9"/>
+                android:layout_weight="9"
+                app:srcCompat="@drawable/ic_delete_forever_black_24dp" />
 
 
         </LinearLayout>
