--- a/app/src/main/res/layout/activity_first_activity.xml
+++ b/app/src/main/res/layout/activity_first_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/Text"
     android:layout_height="match_parent"
-    tools:context=".Activity.First_activity">
+    tools:context=".Activity.Splash_Activity">
 
     <ImageView
         android:id="@+id/imageView"
