--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,7 +8,7 @@
     android:focusableInTouchMode="true"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Activity.Main2Activity">
+    tools:context=".Activity.Displaying_complete_product_details_Activity">
 
 
 
