--- a/app/src/main/res/layout/activity_customize__order.xml
+++ b/app/src/main/res/layout/activity_customize__order.xml
@@ -32,5 +32,29 @@ tools:context=".Activity.Customize_Order">
     android:layout_above="@+id/layout_buttom">
 
 
+    <com.badoualy.stepperindicator.StepperIndicator
+        android:id="@+id/stepper_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        app:stpi_labels="@array/stepLabels"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/stpi_default_circle_color"
+        android:layout_marginBottom="8dp"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/stepper_indicator"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        />
 </LinearLayout>
 </RelativeLayout>
