--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="mrk">#cb9945</color>
     <color name="whish">#FDE4E2E2</color>
     <color name="skyBlue">#FF2E6FAA</color>
+    <color name="green">#ff62b255</color>
+
 
 
     <color name="colorPrimary">#373F6E</color>
