--- a/app/src/main/res/layout/fragment_custom_order_search_fragment.xml
+++ b/app/src/main/res/layout/fragment_custom_order_search_fragment.xml
@@ -3,24 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusedByDefault="false"
+    android:focusableInTouchMode="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.Custom_order_search_fragment">
 
 
 
+
+    <View  android:layout_width="match_parent"
+        android:layout_height="1dp"
+       android:layout_below="@+id/radio"
+        android:background="@color/whish"
+        />
     <android.support.v7.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:elevation="5dp"
-        android:background="@drawable/background_design"
+        android:layout_below="@+id/radio"
+        android:background="@drawable/custom_search_backgroung"
         android:id="@+id/custom_search"
+
         android:layout_margin="10dp"
         app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
         android:animateLayoutChanges="true"
-        app:defaultQueryHint="Search for Order">
+        app:defaultQueryHint="Search By Name">
 
     </android.support.v7.widget.SearchView>
-
 
 
         <View  android:layout_width="match_parent"
@@ -30,6 +39,8 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@+id/add_new_product_btn"
+            android:layout_below="@+id/radio"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:id="@+id/custom_search_listview"></ListView>
 
