--- a/app/src/main/res/layout/fragment_customize_order_frag2.xml
+++ b/app/src/main/res/layout/fragment_customize_order_frag2.xml
@@ -1,16 +1,359 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".Fragments.Customize_order_frag2">
-<!-- TODO: Update blank fragment layout -->
-<ExpandableListView
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:groupIndicator="@null"
-    android:id="@+id/childrens"
-    >
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Fragments.Custom_order_frag3">
+<!-- TODO: Update blank fragment layout -->
 
-</ExpandableListView>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:focusableInTouchMode="true"
+        android:focusedByDefault="false">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/cart_frame"
+            android:focusedByDefault="false"
+            android:padding="15dp"
+            android:focusableInTouchMode="true"
+            android:id="@+id/activivy_layout"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginBottom="15dp">
+
+
+                <TextView
+                    android:id="@+id/customer_nu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="italic"
+                    android:layout_marginBottom="4dp"
+                    android:text="@string/product_n"
+                    android:textAppearance="@style/customer_nu"
+                    android:gravity="top"
+                    />
+
+
+                    <AutoCompleteTextView
+                        android:layout_width="match_parent"
+                        android:id="@+id/cust_no"
+                        android:layout_height="40dp"
+                        android:paddingLeft="4dp"
+                        android:layout_weight="2"
+                        android:background="@drawable/light_blue_background"
+                        android:inputType="text"
+                        android:scrollHorizontally="true"
+                        android:singleLine="true"
+                        android:textColor="#000"
+                        android:textSize="16sp" />
+
+
+            </LinearLayout>
+
+             <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                 android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginRight="4dp"
+                android:orientation="vertical"
+                android:layout_marginBottom="15dp">
+
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="italic"
+                    android:layout_marginBottom="4dp"
+                    android:text="@string/date"
+                    android:textAppearance="@style/customer_nu"
+                    android:gravity="top"
+                    />
+
+                    <EditText
+                        android:id="@+id/date"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/light_blue_background"
+                        android:layout_height="40dp"
+                        android:gravity="center|start"
+                        android:paddingLeft="5dp"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:scrollHorizontally="true"
+                        android:textColor="#000"
+                        android:textSize="16sp" />
+
+
+            </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginLeft="4dp"
+        android:orientation="vertical"
+        android:layout_marginBottom="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="italic"
+            android:layout_marginBottom="4dp"
+            android:text="@string/gross"
+            android:textAppearance="@style/customer_nu"
+            android:gravity="top"
+            />
+
+
+            <EditText
+                android:id="@+id/cust_name"
+                android:layout_width="match_parent"
+                android:background="@drawable/light_blue_background"
+                android:layout_height="40dp"
+                android:gravity="center|start"
+                android:paddingLeft="5dp"
+                android:maxLines="1"
+                android:inputType="numberDecimal"
+                android:singleLine="true"
+                android:scrollHorizontally="true"
+                android:textColor="#000"
+                android:textSize="16sp" />
+
+
+    </LinearLayout>
+       </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginRight="4dp"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="15dp">
+
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="italic"
+                        android:layout_marginBottom="4dp"
+                        android:text="@string/qty"
+                        android:textAppearance="@style/customer_nu"
+                        android:gravity="top"
+                        />
+
+                        <EditText
+                            android:id="@+id/qty"
+                            android:layout_width="match_parent"
+                            android:background="@drawable/light_blue_background"
+                            android:layout_height="40dp"
+                            android:gravity="center|start"
+                            android:paddingLeft="5dp"
+                            android:inputType="numberDecimal"
+                            android:maxLines="1"
+                            android:singleLine="true"
+                            android:scrollHorizontally="true"
+                            android:textColor="#000"
+                            android:textSize="16sp" />
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="4dp"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="15dp">
+
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="italic"
+                        android:layout_marginBottom="4dp"
+                        android:text="@string/size"
+                        android:textAppearance="@style/customer_nu"
+                        android:gravity="top"
+                        />
+
+
+                        <EditText
+                            android:id="@+id/size"
+                            android:layout_width="match_parent"
+                            android:background="@drawable/light_blue_background"
+                            android:layout_height="40dp"
+                            android:gravity="center|start"
+                            android:paddingLeft="5dp"
+                            android:maxLines="1"
+                            android:inputType="numberDecimal"
+                            android:singleLine="true"
+                            android:scrollHorizontally="true"
+                            android:textColor="#000"
+                            android:textSize="16sp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                  android:layout_marginRight="4dp"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="15dp">
+
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="italic"
+                        android:layout_marginBottom="4dp"
+                        android:text="@string/melting"
+                        android:textAppearance="@style/customer_nu"
+                        android:gravity="top"
+                        />
+
+                        <EditText
+                            android:id="@+id/melting"
+                            android:layout_width="match_parent"
+                            android:background="@drawable/light_blue_background"
+                            android:layout_height="40dp"
+                            android:gravity="center|start"
+                            android:paddingLeft="5dp"
+                            android:inputType="text"
+                            android:maxLines="1"
+                            android:singleLine="true"
+                            android:scrollHorizontally="true"
+                            android:textColor="#000"
+                            android:textSize="16sp" />
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="4dp"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="15dp">
+
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="italic"
+                        android:layout_marginBottom="4dp"
+                        android:text="@string/sea"
+                        android:textAppearance="@style/customer_nu"
+                        android:gravity="top"
+                        />
+
+                        <EditText
+                            android:id="@+id/sea"
+                            android:layout_width="match_parent"
+                            android:background="@drawable/light_blue_background"
+                            android:layout_height="40dp"
+                            android:gravity="center|start"
+                            android:paddingLeft="5dp"
+                            android:maxLines="1"
+                            android:inputType="text"
+                            android:singleLine="true"
+                            android:scrollHorizontally="true"
+                            android:textColor="#000"
+                            android:textSize="16sp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginBottom="15dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/descr"
+                    android:layout_marginBottom="4dp"
+                    android:textStyle="italic"
+                    android:textAppearance="@style/customer_nu"
+                    android:gravity="top"
+                    />
+
+
+                    <EditText
+                        android:id="@+id/address"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/light_blue_background"
+                        android:layout_height="60dp"
+                        android:gravity="start"
+                        android:paddingLeft="5dp"
+                        android:scrollHorizontally="true"
+                        android:textColor="#000"
+                        android:textSize="16sp" />
+
+
+
+            </LinearLayout>
+             <ImageView
+                 android:layout_width="120dp"
+                 android:elevation="2dp"
+                 android:visibility="gone"
+                 android:layout_height="120dp"
+                 android:layout_gravity="center"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginTop="32dp"
+                android:hint="UPLOAD REFERENCE IMAGE"
+                android:textAppearance="@style/customer_nu"
+                android:textColorHint="@color/skyBlue"
+                android:background="@drawable/pricebreak_background"/>
+        </LinearLayout>
+
+    </ScrollView>
+    <Button
+        android:id="@+id/place_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:textSize="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@color/skyBlue"
+        android:hint="PLCAE ORDER"
+        android:textColorHint="@color/white" />
+
 </RelativeLayout>
