--- a/app/src/main/res/layout/activity_search_.xml
+++ b/app/src/main/res/layout/activity_search_.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
     tools:context=".Activity.MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/frame2">
     <android.support.v7.widget.Toolbar
@@ -44,4 +44,4 @@
     </ListView>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
