--- a/app/src/main/res/layout/fragment_custom_order_placed_frag.xml
+++ b/app/src/main/res/layout/fragment_custom_order_placed_frag.xml
@@ -7,13 +7,17 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_above="@+id/finish_button"
+    android:orientation="vertical"
+    >
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
-    android:orientation="vertical"
-    >
-
+    android:orientation="vertical">
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -24,11 +28,26 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/place_text"
         android:textSize="24sp"
         android:layout_margin="8dp"
        android:textColor="@color/green"
         android:textAppearance="@style/customer_nu"
         android:text="@string/placed"
         />
+
 </LinearLayout>
+</RelativeLayout>
+
+
+    <Button
+        android:id="@+id/finish_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:textSize="15dp"
+        android:background="@color/skyBlue"
+        android:hint="FINISH"
+        android:textColorHint="@color/white" />
+
 </RelativeLayout>
