--- a/app/src/main/res/layout/fragment_customize_order_frag2.xml
+++ b/app/src/main/res/layout/fragment_customize_order_frag2.xml
@@ -10,6 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/place_button"
         android:focusableInTouchMode="true"
         android:focusedByDefault="false">
         <LinearLayout
@@ -41,11 +42,12 @@
                     />
 
 
-                    <AutoCompleteTextView
+                    <EditText
                         android:layout_width="match_parent"
-                        android:id="@+id/cust_no"
+                        android:id="@+id/product_name"
                         android:layout_height="40dp"
                         android:paddingLeft="4dp"
+                        android:editable="false"
                         android:layout_weight="2"
                         android:background="@drawable/light_blue_background"
                         android:inputType="text"
@@ -118,7 +120,7 @@
 
 
             <EditText
-                android:id="@+id/cust_name"
+                android:id="@+id/g_weight"
                 android:layout_width="match_parent"
                 android:background="@drawable/light_blue_background"
                 android:layout_height="40dp"
@@ -314,12 +316,11 @@
 
 
                     <EditText
-                        android:id="@+id/address"
+                        android:id="@+id/descr"
                         android:layout_width="match_parent"
                         android:background="@drawable/light_blue_background"
                         android:layout_height="60dp"
                         android:gravity="start"
-                        android:paddingLeft="5dp"
                         android:scrollHorizontally="true"
                         android:textColor="#000"
                         android:textSize="16sp" />
@@ -337,7 +338,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
-                android:layout_marginTop="32dp"
+               android:layout_margin="32dp"
                 android:hint="UPLOAD REFERENCE IMAGE"
                 android:textAppearance="@style/customer_nu"
                 android:textColorHint="@color/skyBlue"
@@ -351,9 +352,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:textSize="15dp"
-        android:layout_marginTop="25dp"
         android:background="@color/skyBlue"
-        android:hint="PLCAE ORDER"
+        android:hint="PLACE ORDER"
         android:textColorHint="@color/white" />
 
 </RelativeLayout>
