--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
     </style>
 
     //////////////////To change the Tool Bar Arrow Color....////////////////////////////////////
+
     <style name="Toolbar_Arrow" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="colorControlNormal">@color/Titel</item>
 
@@ -65,7 +66,6 @@
     </style>
 
 
-
     <style name="customer_nu">
 
         <item name="android:textSize">
@@ -75,8 +75,11 @@
         <item name="android:textColor">
             #919AB0
         </item>
+    </style>
 
-
+    <style name="bold_style">
+        <item name="android:textColor">#ff000000</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
